fixed some spacing

--- a/client/src/Components/LandingPage/LandingPage.less
+++ b/client/src/Components/LandingPage/LandingPage.less
@@ -40,7 +40,8 @@
       .Content__Left {
         width: 50%;
         .Left__Tagline {
-          height: 30vh;
+          margin-top: 13vh;
+          height: 25 vh;
           display: flex;
           justify-content: flex-end;
           .Tagline__Phrase {
