--- a/client/src/Components/LandingPage/LogInBay.less
+++ b/client/src/Components/LandingPage/LogInBay.less
@@ -29,6 +29,9 @@
         cursor: pointer;
         color: white;
         width: 100%;
+        -webkit-box-shadow: 0 3px 2px #424242;
+        -moz-box-shadow: 0 3px 2px #424242;
+        box-shadow: 0 3px 2px #424242;
       }
       input[type=text] {
         background-color: white;
